Update rule of five

--- a/c++/rule-of-five/Makefile
+++ b/c++/rule-of-five/Makefile
@@ -1,6 +1,6 @@
 EXECUTABLE = main
-SOURCES = $(wildcard *.cpp)
-OBJECTS = $(SOURCES: .cpp=.o)
+SOURCES = $(wildcard *.hpp *.cpp)
+OBJECTS = $(SOURCES: .hpp=.o *cpp=*cpp)
 
 CXX=g++
 CXXFLAGS=-g -Wall -std=c++11
@@ -12,11 +12,8 @@ all: $(EXECUTABLE)
 $(EXECUTABLE):  $(OBJECTS)
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
-%.o: %.c %.h
-	        $(CC) $(CCFLAGS) -c $<
-
-%.o: %.c
-	        $(CC) $(CCFLAGS) -c $<
+%.o: %.hpp
+	$(CC) $(CCFLAGS) -c $<
 
 test: main
 	./$(EXECUTABLE)
@@ -25,4 +22,4 @@ lint:
 	astyle --style=allman --unpad-paren --pad-oper --convert-tabs --pad-header --delete-empty-lines $(SOURCES) $(HEADERS)
 
 clean:
-	rm -f *.class *.o *.orig $(EXECUTABLE)
+	rm -f *.class *.o $(EXECUTABLE)
